# ContextX

./: .gitignore  README.md
docs/superpowers/plans/: 2026-05-26-agent-context-python.md  2026-05-26-agent-context-typescript.md
docs/superpowers/specs/: 2026-05-26-agent-context-sdk-design.md
python/: pyproject.toml
python/src/agent_context/: __init__.py  exceptions.py
python/src/agent_context/adapters/: __init__.py  anthropic.py  openai.py
python/src/agent_context/assembly/: __init__.py  builder.py
python/src/agent_context/core/: __init__.py  models.py  storage.py
python/src/agent_context/management/: __init__.py  conversation.py  window.py
python/tests/: test_exceptions.py  test_integration.py
python/tests/adapters/: test_anthropic.py  test_openai.py
python/tests/assembly/: test_builder.py
python/tests/core/: test_models.py  test_storage.py
python/tests/management/: test_conversation.py  test_window.py
typescript/: package-lock.json  package.json
typescript/src/: exceptions.ts  index.ts
typescript/src/adapters/: anthropic.ts  index.ts  openai.ts
typescript/src/assembly/: builder.ts  index.ts
typescript/src/core/: index.ts  models.ts  storage.ts
typescript/src/management/: conversation.ts  index.ts  window.ts
typescript/tests/: exceptions.test.ts  imports.test.ts  integration.test.ts
typescript/tests/adapters/: anthropic.test.ts  openai.test.ts
typescript/tests/assembly/: builder.test.ts
typescript/tests/core/: models.test.ts  storage.test.ts
typescript/tests/management/: conversation.test.ts  window.test.ts
