[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-context"
version = "0.1.0"
description = "Agent context management SDK"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_context"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
